--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "4.17.1",
     "joi": "^17.9.2",
     "lodash.isempty": "^4.4.0",
+    "mongoose": "^7.4.5",
     "morgan": "1.10.0"
   },
   "devDependencies": {
