--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "template",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "18.*"
+  },
+
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
@@ -27,7 +31,5 @@
     "eslint-plugin-promise": "5.2.0",
     "nodemon": "2.0.15"
   },
-  "engines": {
-    "node": ">=16.0.0"
-  }
+  
 }
