--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
 DB_HOST=<MongoDB Connection String; Create Cluster on MongoDB Atlas>
 PORT=
-SECRET_KEY=
+SECRET_KEY==<add JWT secret here>
+DB_TEST_URI=<please insert here mongodb test
