--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
     "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint:fix": "eslint --fix **/*.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -23,10 +25,11 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
     "lodash.isempty": "^4.4.0",
-    "mongoose": "^7.4.5",
+    "mongoose": "^7.5.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "eslint": "7.19.0",
@@ -35,6 +38,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
+    "jest": "^29.7.0",
     "nodemon": "2.0.15"
   }
 }
