--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "mongoose": "^7.5.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7",
-    "supertest": "^6.3.3"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "7.19.0",
@@ -39,6 +38,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
     "jest": "^29.7.0",
-    "nodemon": "2.0.15"
+    "nodemon": "2.0.15",
+    "supertest": "^6.3.3"
   }
 }
